tests/paczka1/small_fuzzy/45208235.err
Error in line 4: 3KB S35 71,6
Error in line 8: 8tDMSvz A987 7,7
Error in line 14: 8tDMSvzmS35m1,2
